fix for touch-action on mobile using css override

--- a/app/global.css
+++ b/app/global.css
@@ -65,3 +65,7 @@ section p {
   font-weight: 600;
   margin-bottom: 1rem;
 }
+
+body div:first-child {
+  touch-action: auto !important;
+}
